--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=ResortSpringBoot
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/customer
-spring.datasource.password=
-spring.datasource.username=
+spring.config.import = env.properties
+spring.datasource.password=${DB_USER}
+spring.datasource.username=${DB_PASSWORD}
 spring.jpa.show-sql=true
